; ModuleID = '/home/carl/AnghaBench/linux/drivers/memory/samsung/extr_exynos-srom.c_exynos_srom_alloc_reg_dump.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/memory/samsung/extr_exynos-srom.c_exynos_srom_alloc_reg_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.exynos_srom_reg_dump = type { i64 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.exynos_srom_reg_dump* (i64*, i64)* @exynos_srom_alloc_reg_dump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.exynos_srom_reg_dump* @exynos_srom_alloc_reg_dump(i64* %0, i64 %1) #0 {
  %3 = alloca %struct.exynos_srom_reg_dump*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.exynos_srom_reg_dump*, align 8
  %7 = alloca i32, align 4
  store i64* %0, i64** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i32, i32* @GFP_KERNEL, align 4
  %10 = call %struct.exynos_srom_reg_dump* @kcalloc(i64 %8, i32 8, i32 %9)
  store %struct.exynos_srom_reg_dump* %10, %struct.exynos_srom_reg_dump** %6, align 8
  %11 = load %struct.exynos_srom_reg_dump*, %struct.exynos_srom_reg_dump** %6, align 8
  %12 = icmp ne %struct.exynos_srom_reg_dump* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store %struct.exynos_srom_reg_dump* null, %struct.exynos_srom_reg_dump** %3, align 8
  br label %36

14:                                               ; preds = %2
  store i32 0, i32* %7, align 4
  br label %15

15:                                               ; preds = %31, %14
  %16 = load i32, i32* %7, align 4
  %17 = zext i32 %16 to i64
  %18 = load i64, i64* %5, align 8
  %19 = icmp ult i64 %17, %18
  br i1 %19, label %20, label %34

20:                                               ; preds = %15
  %21 = load i64*, i64** %4, align 8
  %22 = load i32, i32* %7, align 4
  %23 = zext i32 %22 to i64
  %24 = getelementptr inbounds i64, i64* %21, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.exynos_srom_reg_dump*, %struct.exynos_srom_reg_dump** %6, align 8
  %27 = load i32, i32* %7, align 4
  %28 = zext i32 %27 to i64
  %29 = getelementptr inbounds %struct.exynos_srom_reg_dump, %struct.exynos_srom_reg_dump* %26, i64 %28
  %30 = getelementptr inbounds %struct.exynos_srom_reg_dump, %struct.exynos_srom_reg_dump* %29, i32 0, i32 0
  store i64 %25, i64* %30, align 8
  br label %31

31:                                               ; preds = %20
  %32 = load i32, i32* %7, align 4
  %33 = add i32 %32, 1
  store i32 %33, i32* %7, align 4
  br label %15

34:                                               ; preds = %15
  %35 = load %struct.exynos_srom_reg_dump*, %struct.exynos_srom_reg_dump** %6, align 8
  store %struct.exynos_srom_reg_dump* %35, %struct.exynos_srom_reg_dump** %3, align 8
  br label %36

36:                                               ; preds = %34, %13
  %37 = load %struct.exynos_srom_reg_dump*, %struct.exynos_srom_reg_dump** %3, align 8
  ret %struct.exynos_srom_reg_dump* %37
}

declare dso_local %struct.exynos_srom_reg_dump* @kcalloc(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
